--- a/.github/workflows/openwrt_ipk.yaml
+++ b/.github/workflows/openwrt_ipk.yaml
@@ -86,7 +86,68 @@ jobs:
           sudo swapoff -a || true
           sudo rm -rf /swapfile /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
           sudo -E apt-get -qq update
-          sudo -E apt-get -qq install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev libc6-dev-i386 subversion flex uglifyjs gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler antlr3 gperf rsync
+          sudo -E apt-get -qq install \
+            build-essential \
+            binutils \
+            bzip2 \
+            gawk \
+            gettext \
+            git \
+            libncurses5-dev \
+            libz-dev \
+            patch \
+            unzip \
+            zlib1g-dev \
+            flex \
+            p7zip-full \
+            libssl-dev \
+            texinfo \
+            libglib2.0-dev \
+            upx \
+            libelf-dev \
+            autoconf \
+            automake \
+            libtool \
+            gperf \
+            rsync \
+            curl \
+            wget \
+            file \
+            python3 \
+            python3-pip \
+            python3-setuptools \
+            python3-yaml \
+            python3-dev \
+            python3-distutils \
+            swig \
+            time \
+            xsltproc \
+            ccache \
+            ecj \
+            fastjar \
+            java-propose-classpath \
+            libncursesw5-dev \
+            pkg-config \
+            python3-setuptools \
+            python3-dev \
+            libyaml-dev \
+            libpython3-dev \
+            || true
+          # Install additional packages that might be named differently
+          sudo -E apt-get -qq install \
+            asciidoc-base \
+            subversion \
+            node-uglify \
+            gcc-multilib \
+            g++-multilib \
+            msmtp \
+            xmlto \
+            qemu-utils \
+            gettext-base \
+            libc6-dev-i386 \
+            device-tree-compiler \
+            antlr3 \
+            || true
           sudo -E apt-get -qq autoremove --purge
           sudo -E apt-get -qq clean
           sudo timedatectl set-timezone "$TZ"
