--- a/.github/workflows/openwrt_ipk.yaml
+++ b/.github/workflows/openwrt_ipk.yaml
@@ -119,6 +119,9 @@ jobs:
             python3-yaml \
             python3-dev \
             python3-distutils \
+            python3-minimal \
+            python3-wheel \
+            python3-pkg-resources \
             swig \
             time \
             xsltproc \
@@ -128,8 +131,6 @@ jobs:
             java-propose-classpath \
             libncursesw5-dev \
             pkg-config \
-            python3-setuptools \
-            python3-dev \
             libyaml-dev \
             libpython3-dev \
             || true
@@ -151,7 +152,10 @@ jobs:
           sudo -E apt-get -qq autoremove --purge
           sudo -E apt-get -qq clean
           sudo timedatectl set-timezone "$TZ"
-          # curl -fsSL https://raw.githubusercontent.com/P3TERX/dotfiles/master/.bashrc >> ~/.bashrc
+          # Ensure Python 3 is properly linked
+          python3 --version
+          python3 -c "import distutils.util; print('Python distutils available')"
+          which python3
 
       - name: Download SDK
         run: wget ${SDK_URL}${SDK_NAME}.tar.xz
@@ -180,13 +184,34 @@ jobs:
           CONFIG_LUCI_LANG_zh-cn=y
           EOF
 
+      - name: Setup Python Environment
+        run: |
+          # Check Python installation
+          python3 --version
+          python3 -c "import sys; print(f'Python version: {sys.version}')"
+          python3 -c "import distutils.util; print('distutils available')"
+          # Create python symlink if needed
+          if ! command -v python &> /dev/null; then
+            sudo ln -sf /usr/bin/python3 /usr/bin/python
+          fi
+          # Verify Python requirements for OpenWrt
+          python3 -c "import sys; assert sys.version_info >= (3, 5), 'Python 3.5+ required'"
+
       - name: Defconfig
         id: defconfig
         run: |
           cd ~/openwrt-sdk
-          make defconfig
+          # Set Python environment
+          export PYTHON=python3
+          export PATH="/usr/bin:$PATH"
+          # Check prerequisites
+          echo "=== Checking Python environment ==="
+          python3 --version
+          python3 -c "import distutils.util; print('distutils.util imported successfully')"
+          echo "=== Running make defconfig ==="
+          make defconfig || (echo "=== Defconfig failed, trying with FORCE=1 ===" && make defconfig FORCE=1)
           sed -i 's/^CONFIG_PACKAGE_\(.*\)=m$/# CONFIG_PACKAGE_\1 is not set/' .config
-          grep '^CONFIG_PACKAGE_' .config
+          grep '^CONFIG_PACKAGE_' .config || echo "No CONFIG_PACKAGE entries found"
           echo "status=success" >> $GITHUB_OUTPUT
 
       - name: "Install"
