--- a/.github/workflows/openwrt_ipk.yaml
+++ b/.github/workflows/openwrt_ipk.yaml
@@ -86,76 +86,11 @@ jobs:
           sudo swapoff -a || true
           sudo rm -rf /swapfile /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
           sudo -E apt-get -qq update
-          sudo -E apt-get -qq install \
-            build-essential \
-            binutils \
-            bzip2 \
-            gawk \
-            gettext \
-            git \
-            libncurses5-dev \
-            libz-dev \
-            patch \
-            unzip \
-            zlib1g-dev \
-            flex \
-            p7zip-full \
-            libssl-dev \
-            texinfo \
-            libglib2.0-dev \
-            upx \
-            libelf-dev \
-            autoconf \
-            automake \
-            libtool \
-            gperf \
-            rsync \
-            curl \
-            wget \
-            file \
-            python3 \
-            python3-pip \
-            python3-setuptools \
-            python3-yaml \
-            python3-dev \
-            python3-distutils \
-            python3-minimal \
-            python3-wheel \
-            python3-pkg-resources \
-            swig \
-            time \
-            xsltproc \
-            ccache \
-            ecj \
-            fastjar \
-            java-propose-classpath \
-            libncursesw5-dev \
-            pkg-config \
-            libyaml-dev \
-            libpython3-dev \
-            || true
-          # Install additional packages that might be named differently
-          sudo -E apt-get -qq install \
-            asciidoc-base \
-            subversion \
-            node-uglify \
-            gcc-multilib \
-            g++-multilib \
-            msmtp \
-            xmlto \
-            qemu-utils \
-            gettext-base \
-            libc6-dev-i386 \
-            device-tree-compiler \
-            antlr3 \
-            || true
+          sudo -E apt-get -qq install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev libc6-dev-i386 subversion flex uglifyjs gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler antlr3 gperf rsync
           sudo -E apt-get -qq autoremove --purge
           sudo -E apt-get -qq clean
           sudo timedatectl set-timezone "$TZ"
-          # Ensure Python 3 is properly linked
-          python3 --version
-          python3 -c "import distutils.util; print('Python distutils available')"
-          which python3
+          # curl -fsSL https://raw.githubusercontent.com/P3TERX/dotfiles/master/.bashrc >> ~/.bashrc
 
       - name: Download SDK
         run: wget ${SDK_URL}${SDK_NAME}.tar.xz
@@ -184,51 +119,13 @@ jobs:
           CONFIG_LUCI_LANG_zh-cn=y
           EOF
 
-      - name: Setup Python Environment
-        run: |
-          # Check Python installation
-          python3 --version
-          python3 -c "import sys; print(f'Python version: {sys.version}')"
-          python3 -c "import distutils.util; print('distutils available')"
-          # Create python symlink if needed
-          if ! command -v python &> /dev/null; then
-            sudo ln -sf /usr/bin/python3 /usr/bin/python
-          fi
-          # Verify Python requirements for OpenWrt
-          python3 -c "import sys; assert sys.version_info >= (3, 5), 'Python 3.5+ required'"
-          # Additional Python environment setup for OpenWrt SDK
-          echo "=== Setting up Python environment for OpenWrt SDK ==="
-          # Create additional symlinks that OpenWrt might look for
-          sudo ln -sf /usr/bin/python3 /usr/local/bin/python3 || true
-          sudo ln -sf /usr/bin/python3 /usr/local/bin/python || true
-          # Update PATH to include common Python locations
-          export PATH="/usr/bin:/usr/local/bin:$PATH"
-          # Verify distutils module specifically
-          python3 -c "import distutils.core; print('distutils.core available')"
-
       - name: Defconfig
         id: defconfig
         run: |
           cd ~/openwrt-sdk
-          # Set comprehensive Python environment
-          export PYTHON=/usr/bin/python3
-          export PYTHON3=/usr/bin/python3
-          export PATH="/usr/bin:/usr/local/bin:$PATH"
-          # Check prerequisites
-          echo "=== Checking Python environment ==="
-          python3 --version
-          which python3
-          python3 -c "import distutils.util; print('distutils.util imported successfully')"
-          python3 -c "import distutils.core; print('distutils.core imported successfully')"
-          echo "=== Python paths ==="
-          echo "PYTHON=$PYTHON"
-          echo "PYTHON3=$PYTHON3"
-          echo "PATH=$PATH"
-          echo "=== Running make defconfig with FORCE=1 ==="
-          # Use FORCE=1 directly to bypass the prerequisite checks
-          make defconfig FORCE=1
+          make defconfig
           sed -i 's/^CONFIG_PACKAGE_\(.*\)=m$/# CONFIG_PACKAGE_\1 is not set/' .config
-          grep '^CONFIG_PACKAGE_' .config || echo "No CONFIG_PACKAGE entries found"
+          grep '^CONFIG_PACKAGE_' .config
           echo "status=success" >> $GITHUB_OUTPUT
 
       - name: "Install"
@@ -244,12 +141,8 @@ jobs:
       - name: Build IPK
         run: |
           cd ~/openwrt-sdk
-          # Set Python environment for build
-          export PYTHON=/usr/bin/python3
-          export PYTHON3=/usr/bin/python3
-          export PATH="/usr/bin:/usr/local/bin:$PATH"
           chmod 755 -R ./package/${IPK_NAME}
-          make -j16 V=s package/${IPK_NAME}/compile FORCE=1
+          make -j16 V=s package/${IPK_NAME}/compile
 
       # 提交下载
       - name: Upload bin directory
